# puzzle-game

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  tempCodeRunnerFile.py  tmp.c
Application/: Application.cpp  Application.hpp
Define/: Define.cpp  Define.hpp
Looper/: Looper.cpp  Looper.hpp
src/: main.cpp  test.cpp  tmp.py
src/Application/: Application.cpp  Application.hpp
src/ColorGradator/: ColorGradator.cpp  ColorGradator.hpp
src/Define/: Define.cpp  Define.hpp
src/ErrorHandler/: ErrorHandler.cpp
src/FpsKeeper/: FpsKeeper.cpp  FpsKeeper.hpp
src/InputMonitor/: InputMonitor.cpp  InputMonitor.hpp
src/Looper/: Looper.cpp  Looper.hpp
src/Object/: Object.hpp
src/Object/Floor/: Floor.cpp  Floor.hpp
src/Object/Floor/FloorManager/: FloorManager.cpp  FloorManager.hpp
src/Object/Goal/: Goal.cpp  Goal.hpp
src/Object/Hole/: Hole.cpp  Hole.hpp
src/Object/Hole/HoleManager/: HoleManager.cpp  HoleManager.hpp
src/Object/ObjectManager/: ObjectManager.cpp  ObjectManager.hpp
src/Object/Player/: Player.cpp  Player.hpp
src/Object/Player/PlayerManager/: PlayerManager.cpp  PlayerManager.hpp
src/Object/Wall/: Wall.cpp  Wall.hpp
src/Object/Wall/WallManager/: WallManager.cpp  WallManager.hpp
src/PuzzleGenerator/: PuzzleGenerator.cpp  PuzzleGenerator.hpp
src/PuzzleSolver/: PuzzleSolver.cpp  PuzzleSolver.hpp
src/PuzzleSolver/IceFloorPuzzleSolver/: IceFloorPuzzleSolver.cpp  IceFloorPuzzleSolver.hpp
src/PuzzleSolver/SynchronizedPuzzleSolver/: SynchronizedPuzzleSolver.cpp  SynchronizedPuzzleSolver.hpp
src/Scene/: IOnChangedListener.hpp  SceneType.hpp
src/Scene/AbstractScene/: AbstractScene.cpp  AbstractScene.hpp
src/Scene/GameScene/: GameScene.cpp  GameScene.hpp
src/Scene/Parameter/: Parameter.cpp  Parameter.hpp
src/Scene/TitleScene/: TitleScene.cpp  TitleScene.hpp
src/ShapeRenderer/: ShapeRenderer.cpp  ShapeRenderer.hpp
src/Solver/: Solver.cpp  Solver.hpp
src/Utilities/: Macros.h  Macros.hpp  Singleton.hpp
src/Utilities/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.hpp
